# camera_capture

./: .travis.yml  Cargo.toml  README.md  build.rs
examples/: glium.rs  hello_camera.rs  piston.rs  take_picture.rs
src/: error.rs  lib.rs
src/linux/: mod.rs
src/windows/: mod.rs
