[package]
name = "camera_capture"
version = "0.1.0"
authors = ["Oliver Schneider <git-spam-no-reply9815368754983@oli-obk.de>"]
license = "MIT"
description = "capture webcam images on linux (windows WIP)"
keywords = ["webcam", "v4l", "v4l2", "capture", "camera"]
repository = "https://github.com/oli-obk/camera_capture"

build = "build.rs"

[build-dependencies]
pkg-config = "0.3.8"

[dependencies]
image = "0.7"

[target.'cfg(windows)'.dependencies]
escapi = "3"

[target.'cfg(unix)'.dependencies]
rscam = "0.5.2"

[dev-dependencies]
piston_window = "0.40"
piston-texture = "0.4"
