[package]
name = "camera_capture"
version = "0.5.0"
authors = ["Oliver Schneider <git-spam-no-reply9815368754983@oli-obk.de>"]
license = "MIT"
description = "capture webcam images on linux and windows"
keywords = ["webcam", "v4l", "capture", "camera", "mf"]
repository = "https://github.com/oli-obk/camera_capture"

build = "build.rs"

[build-dependencies]
pkg-config = "0.3.9"

[dependencies]
image = "0.17.0"

[target.'cfg(windows)'.dependencies]
escapi = "3.0.5"
lazy_static = "0.2.10"

[target.'cfg(unix)'.dependencies]
rscam = "0.5.3"

[dev-dependencies]
piston_window = "0.73.0"
piston-texture = "0.6.0"
glium = "0.18.1"
failure = "0.1.1"
